--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@ Now, change the other relevant information in this section, especially if you're
     
 <div class="par-centertext">
   <h2>
-	  Family to me is not just limited to the people I live with, but also a lot of the friends I've made throughout life.  I've spent a lot of my time with these people - laughing, creating, causing mischief, just overall having fun.  My parents have rooted me on for as long as I can remember, which I'm thankful for.
+	  Family to me is not just limited to the people I live with, but also a lot of the friends I've made throughout life.  I've spent a lot of my time with these people - laughing, creating, causing mischief, just overall having fun online.
 	  <br>
 	  And about home, I guess one way to look at it would be: even though I no longer live in the city of Pittsburgh, it's still home to me.  My family doesn't live too far from Pittsburgh now, and here is home as well don't get me wrong, but it would take a long distance and length of time before I stop saying "I'm from Pittsburgh."
   </h2>    
